add some comments

--- a/wikimedia.html
+++ b/wikimedia.html
@@ -4,6 +4,9 @@
 <link type="text/css" rel="stylesheet" href="app.css"/>
 </head>
 <body> 
+			<!-- I would space things out more. add some indentation so its more readable.  the a and img elements could just be copied from the original site too. -adam winn 03/26 !--> 
+
+
 <div id="intro">
      <p><b>Wikimedia</b> is a global <a href="//meta.wikimedia.org/wiki/Wikimedia_movement">movement</a> whose <a href="//wikimediafoundation.org/wiki/Mission_statement">mission</a> is to bring free educational content to the world.</p>
      <p>Through various <a href="//wikimediafoundation.org/wiki/Our_projects">projects</a>, <a href="//meta.wikimedia.org/wiki/Wikimedia_chapters">chapters</a>, and the support structure of the non-profit Wikimedia Foundation, Wikimedia <a href="//wikimediafoundation.org/wiki/Vision">strives</a> to bring about a world in which every single human being can freely share in the sum of all knowledge.</p>
